[workspace]
members = ["crates/refresh-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
mockall = "0.13"
rstest = "0.23"
pretty_assertions = "1.4"
tempfile = "3.14"
signal-hook = "0.3"
thiserror = "2.0"
